# QNotepad

./: CMakeLists.txt  QBuffer.h  README.md  Utf8.h  Utils.cpp  Utils.h  config.h  main.cpp  notepad.cpp  notepad.h
scintilla/qt/ScintillaEdit/: Makefile  moc_ScintillaDocument.cpp  moc_ScintillaEdit.cpp  moc_ScintillaEditBase.cpp  moc_ScintillaQt.cpp
